--- a/styles.css
+++ b/styles.css
@@ -26,14 +26,20 @@ header .corner {
     justify-content: space-evenly;
     flex-grow: 1;
     list-style-type: none;
-    padding: 0 20px;
+    padding: 0 15px;
 }
 
 .between li {
-    padding: 1.4%;
+    padding: 2%;
 }
 
-.between li:hover {
+.between li a {
+    padding: 2%;
+    text-decoration: none;
+    color: black;
+}
+
+.between li a:hover {
     background-color: rgba(183, 171, 171, 0.2);
     text-decoration: underline;
     text-decoration-color: red;
@@ -84,7 +90,9 @@ header .corner {
     width: 40%;
     padding-top: 8%;
 }
-
+.dropdown,.toggle_btn{
+    display: none;
+}
 .atmain {
     border-radius: 20px;
     padding: 0.25rem;
@@ -99,7 +107,7 @@ header .corner {
 #video:hover {
     color: red;
     text-shadow: 5px 10px 5px 10px rgb(73, 66, 66); /* x-axis y-axis blur spread color */
-    /* filter:brightness(5); */
+    /* filter: brightness(5); */
     text-decoration: underline;
     scale: 1.075;
     cursor: pointer;
@@ -191,57 +199,60 @@ aside {
     .left, .right {
         width: 30%;
     }
-    
+
     .main {
         flex-wrap: wrap;
     }
-    
-    header{
-        height:8%;
+
+    header {
+        height: 8%;
     }
-    .main{padding-top: 15%;
+    .main {
+        padding-top: 15%;
         padding-left: 5%;
         padding-right: 5%;
         padding-bottom: 10%;
-        height:35%;
+        height: 35%;
         justify-content: flex-start;
     }
-    .atmain{
+    .atmain {
         margin-right: 2%;
     }
-    
-    #f1{
+
+    #f1 {
         width: 40%;
         padding: 4%;
         border: none;
         justify-content: center;
-    }.between{
+    }
+    .between {
         padding-top: 2%;
     }
-    
-    .cards{
-        height:35%;
+
+    .cards {
+        height: 35%;
         width: 100%;
         display: flex;
         flex-wrap: wrap;
     }
-    #_box{
+    #_box {
         display: block;
         width: 40%;
-    }#box_button{
+    }
+    #box_button {
         display: block;
         margin: 0 auto;
     }
-    footer{
-        height:15%;
+    footer {
+        height: 15%;
     }
 }
 
 @media (max-width: 800px) {
-    .container{
-        width:100%;
+    .container {
+        width: 100%;
     }
-    .left{
+    .left {
         padding-left: 4%;
         padding-right: 4%;
     }
@@ -249,230 +260,270 @@ aside {
         width: 100%;
     }
 
-    #main{
+    #main {
         padding-left: 10%;
     }
     .main {
         padding-top: 10%;
     }
-    
+
     header .corner {
-        flex-direction: column;
+        /* flex-direction: column; */
         align-items: center;
+        display: flex;
     }
-    
+
     .between {
         flex-direction: column;
         padding: 0;
     }
-    
+
     .atheader, .brand {
         margin: 10px 0;
     }
-    header{
-        height:15%;
+    .toggle_btn {
+        display: block;
+        cursor: pointer;
+    }
+    .dropdown {
+        position: absolute;
+        right: 2rem;
+        top: 75%;
+        left: 70%;
+        flex-direction: column;
+        width: 90%;
+        height: 300px;
+        cursor: pointer;
+        justify-content: space-between;
+        background-color: rgba(54, 51, 51, 0.2);
+        display: none;
+    }
+
+    .toggle_btn:focus + .dropdown, .dropdown:hover {
+        display: flex;
+    }
+
+    .dropdown li a {
+        text-decoration: none;
+        color: black;   
+        padding-left: 10%;     
+    }
+
+    .dropdown li a:hover {
+        text-decoration: underline;
+        text-decoration-color: red;
+    }
+
+    .atheader_hid {
+        display: block;
+        border-radius: 20px;
+        padding: 0.25rem;
+        background-color: red;
+        border: 1px solid red; 
+        color: white;
+        box-shadow: 1px 0px 10px 5px rgba(192, 55, 55, 0.8);
+        cursor: pointer;
+        margin-left: 5%;
+    }
+    header {
+        height: 15%;
         width: 100%;
     }
-    .brand{
+    .brand {
+        display: block;
         font-size: 60px;
-        padding: 8% 0;
+        padding-top: 7%;
     }
-    .between{
+
+    .between {
         display: none;
     }
-    .atheader{
+    .atheader {
         display: none;
     }
-    .main{
-        height:35%;
+    .main {
+        height: 35%;
         width: 100%;
         padding-top: 25%;
         padding-right: 0;
         margin: auto;
     }
-    .atmain{
+    .atmain {
         margin-left: 25%;
     }
-    .cards{
-        height:35%;
-    }
-   
-    .cards{
-        height:40%;
-        display: flex;
-        flex-wrap: wrap;
-        margin:0 auto;
-        
-    }
-    #_box{
-        width:40%
+    .cards {
+        height: 35%;
     }
 
-    footer{
-        height:15%;
-        width: 100%; 
-        
+    .cards {
+        height: 40%;
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 auto;
     }
-    .first_footer{
+    #_box {
+        width: 40%;
+    }
+
+    footer {
+        height: 15%;
+        width: 100%; 
+    }
+    .first_footer {
         display: flex;
         justify-content: space-between;
     }
-    #f1{
+    #f1 {
         padding: 4%;
         border: none;
-        width:40%
+        width: 40%;
     }
-
 }
 
 @media (max-width: 600px) {
     #_box {
         width: 90%;
     }
-    .container{
-        width:100%;
-        
+    .container {
+        width: 100%;
     }
     #first_footer, #second_footer {
         flex-direction: column;
         align-items: center;
     }
 
-    
     aside {
         padding: 0;
         border-right: none;
         margin-bottom: 20px;
     }
-    
+
     footer {
         padding: 10px 0;
     }
-    header{z-index: 0;
+    header {
+        z-index: 0;
         background-color: white;
-        height:15%;
-        width:100%;
+        height: 15%;
+        width: 100%;
     }
-    .brand{
+    .brand {
         font-size: 80px;
-        margin:5%;
-
+        margin: 5%;
     }
-    .left{
+    .left {
         padding-right: 0;
     }
-    .between{
+    .between {
         display: none;
     }
-    .atheader{
+    .atheader {
         display: none;
     }
-    .main{
-        height:35%;
-        /* padding: 4%; */
+    .main {
+        height: 35%;
         padding-left: 4%;
         padding-right: 0;
-        width:100%;
+        width: 100%;
     }
-    .atmain{
+    .atmain {
         display: inline-block;
         margin-left: 28%;
         margin-right: 10%;
     }
-    #box_button{display: block;
-        margin:0 auto;
+    #box_button {
+        display: block;
+        margin: 0 auto;
     }
-    .cards{
-        height:35%;
+    .cards {
+        height: 35%;
         display: flex;
         flex-wrap: wrap;
-        margin:0 auto;
-        width:90%;
+        margin: 0 auto;
+        width: 90%;
     }
-    footer{
-        height:15%;
-        width: 100%;
+    footer {
+        height: 15%;
+        width: 100%
     }
-    footer aside{
+    footer aside {
         border-bottom: 1px solid white;
         padding-bottom: 2%;
     }
-    .main{ width: 95%;
+    .main {
+        width: 95%;
         padding-top: 30%;
         padding-bottom: 3%;
     }
-    
-    .right{
+
+    .right {
         display: none;
     }
 }
 
 @media (max-width: 400px) {
-    .container{
+    .container {
         width: 100%;
     }
     .enjoy {
         font-size: 40px;
     }
-    
-    .atmain{display: block;
-        margin-left:20%;
-        margin-right: 5%; 
-        display: inline-block;
 
-    }
-    #icon{
-       display: none;
-       display: inline-block;
-    }
-    #video{
-        /* margin-left: 60%; */
+    .atmain {
+        display: block;
+        margin-left: 20%;
+        margin-right: 5%;
         display: inline-block;
     }
-     .atheader {
+    #icon {
+        display: none;
+        display: inline-block;
+    }
+    #video {
+        display: inline-block;
+    }
+    .atheader {
         padding: 0.5rem;
         margin-right: 0;
     }
-    header{
-        height:13%;  
+    header {
+        height: 13%;  
         width: 100%;      
     }
-    
-    .between,.atheader{
+
+    .between, .atheader {
         display: none;
     }
-    .brand{
+    .brand {
         font-size: larger;
-        /* justify-content: center; */
         margin: 2% auto;
     }
-    
-    #box_button{
+
+    #box_button {
         margin-left: 35%;
     }
 
-    .main{
-        height:35%;
-        width:100%;
-        padding-right:0;
-        padding-left:0;
+    .main {
+        height: 35%;
+        width: 100%;
+        padding-right: 0;
+        padding-left: 0;
     }
-    .left{
+    .left {
         padding-top: 20%;
-        margin:0;
-        
+        margin: 0;
     }
-    .right{
+    .right {
         display: none;
     }
-    .cards{
-        height:35%;
+    .cards {
+        height: 35%;
         display: flex;
         flex-wrap: wrap;
-        margin:1rem;
+        margin: 1rem;
     }
-    footer{
-        height:15%;
-        width:100%
+    footer {
+        height: 15%;
+        width: 100%
     }
 }
